welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value tab
	for ( i <- 0 to tab.lenght-1)
                        ^indexOfValue:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (nombre =0)
                   ^