welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var nombre = 0
	for ( i <- 0 to tab.lenght-1)
	{
		if (tab(i)=lookingFor)
	{
		nombre=nombre+1
	}
	}
	if (nombre =0)
	{
		return -1  
	}
	else return nombre 
}
